# remus

./: .gitignore  README.md  pyproject.toml
deploy/k8s/: remus-cluster.yaml
scripts/: run_ruff_check.sh
src/remus/: __init__.py
src/remus/core/search/lexical/: torch_bm25.py
src/remus/kernels/: bm25_kernel.py
src/remus/utils/: dataclass_utils.py  device_utils.py  log_utils.py
