[project]
name = "remus"
version = "0.1.0"
description = "Remote Unified Search - a high-performance GPU-native hybrid keyword/semantic search and retrieval engine for finding the needle in the haystack."
readme = "README.md"
authors = [
    { name = "Jae Ro", email = "jaero.gatech@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.11.8",
    "quart>=0.20.0",
    "ray[serve]>=2.54.1",
    "torch>=2.11.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
   "notebook>=7.5.5",
   "ruff>=0.15.8",
]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[project.scripts]
waldo = "waldo:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
exclude = [
    ".git",
    ".eggs",
    ".ipynb-checkpoints", 
    ".pytype", 
    ".pyenv",
    ".venv", 
    ".vscode", 
    "__pypackages__",
    "node_modules",
    "build", 
    "dist",
    "site-packages",
    ".ipynb",
    ".ruff_cache"
]

line-length = 100
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
ignore = ["F401"]
fixable = ["ALL"]

# allow for unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
